# TRITON-ML

./: .gitignore  LICENSE  README.md  config.example.yaml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
tests/: test_alerting.py  test_fault_classifier.py  test_vibration.py
triton_ml/: __init__.py  __main__.py  alerting.py  config.py  export.py
triton_ml/features/: __init__.py  operational.py  thermal.py  vibration.py
triton_ml/models/: __init__.py  anomaly.py  fault_classifier.py  rul_estimator.py
