[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "triton-ml"
version = "0.4.0"
description = "Predictive maintenance ML pipeline for ship machinery — fault classification, RUL estimation, and anomaly detection"
readme = "README.md"
license = { text = "Proprietary" }
requires-python = ">=3.10"
authors = [
    { name = "Fincantieri Digital", email = "digital@fincantieri.it" },
]
keywords = ["predictive-maintenance", "maritime", "machinery", "rul", "cbm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Manufacturing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "numpy>=1.24,<2.0",
    "scipy>=1.11",
    "scikit-learn>=1.3",
    "xgboost>=2.0",
    "shap>=0.43",
    "torch>=2.1",
    "onnx>=1.15",
    "onnxruntime>=1.17",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "ruff>=0.1", "mypy>=1.7"]

[tool.setuptools.packages.find]
include = ["triton_ml*"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.mypy]
python_version = "3.10"
strict = true
